# web-tv-remote-control

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  web-tv-remote-control.py
.gitea/workflows/: build-and-publish-docker.yml
assets/: manifest.json  style.css  sw.js
src/web_tv_remote_control/: __init__.py  __main__.py  cli.py  keys.py  webserver.py
src/web_tv_remote_control/web/: index.html  manifest.json  script.js  sw.js
